bin/tests/snapshots/bool_comparison__01765d342111cdd7f2f68ac70b4a9451_lint.snap
---
source: bin/tests/bool_comparison.rs
---
true != false
---
[bool_comparison] Warning: Equality comparison between boolean literals
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ true != false
   │ ──────┬──────  
   │       ╰──────── Equality comparison between boolean literals
───╯
