bin/tests/snapshots/bool_comparison__01765d342111cdd7f2f68ac70b4a9451_lint_errfmt.snap
---
source: bin/tests/bool_comparison.rs
---
true != false
---
<temp_file_path>>1:1:W:1:[bool_comparison] Equality comparison between boolean literals
