bin/tests/snapshots/bool_comparison__3fce60992c69dd4f86be49b4f2898f9e_lint.snap
---
source: bin/tests/bool_comparison.rs
---
false != true
---
[01] Warning: Equality comparison between boolean literals
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ false != true
   │ ──────┬──────  
   │       ╰──────── Equality comparison between boolean literals
───╯
