bin/tests/snapshots/bool_comparison__3fce60992c69dd4f86be49b4f2898f9e_lint_errfmt.snap
---
source: bin/tests/bool_comparison.rs
---
false != true
---
<temp_file_path>>1:1:W:1:[bool_comparison] Equality comparison between boolean literals
