bin/tests/snapshots/bool_comparison__5d2c71eef69cc07e519dc3646f786ba7_lint.snap
---
source: bin/tests/bool_comparison.rs
---
false == false
---
[bool_comparison] Warning: Equality comparison between boolean literals
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ false == false
   │ ───────┬──────  
   │        ╰──────── Equality comparison between boolean literals
───╯
