bin/tests/snapshots/bool_comparison__5d2c71eef69cc07e519dc3646f786ba7_lint_errfmt.snap
---
source: bin/tests/bool_comparison.rs
---
false == false
---
<temp_file_path>>1:1:W:1:[bool_comparison] Equality comparison between boolean literals
