bin/tests/snapshots/bool_comparison__5d2c71eef69cc07e519dc3646f786ba7_lint_json.snap
---
source: bin/tests/bool_comparison.rs
---
false == false
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "bool_comparison",
      "note": "Equality comparison between boolean literals",
      "code": 1,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 15
            }
          },
          "message": "Equality comparison between boolean literals",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
